# qsCrypto

./: .gitignore  pyproject.toml  requirements_py311.txt  settings.py
data/: price.py  streaming.py
examples/: mac.py
portfolio/: portfolio.py  portfolio_test.py  position.py
qsCrypto/: settings.py
qsCrypto/backtest/: backtest.py  output.py
qsCrypto/data/: price.py  streaming.py
qsCrypto/execution/: execution.py
qsCrypto/notebooks/: ML_in_Finance_MarketMaking.ipynb
qsCrypto/strategy/: strategy.py
qsCrypto/trading/: trading.py
scripts/: generate_simulated_pair.py  test_performance.py
